Contains avatar image instead of covering its container Also fixed loader showing behind transparent images

--- a/frontend/src/css/components/UserPhoto.css
+++ b/frontend/src/css/components/UserPhoto.css
@@ -7,6 +7,11 @@
   border-radius: 50%;
 }
 
+.UserPhoto--loaded
+{
+  background-image: none;
+}
+
 .UserPhoto div {
   border-radius: 50%;
 }
